<resources>
    <string name="app_name">课堂练习</string>
    <string name="error_net">网络错误，请检查网络设置</string>
    <string name="net_refresh">点击刷新</string>
    <string name="loading">加载中...</string>
    <string name="submit">正在提交中...</string>
    <string name="net_error_page">哎呀，你的网络不太给力</string>
    <string name="data_no">这里什么都没有</string>

    <!--登录-->
    <string name="empty_user">用户名不能为空</string>
    <string name="empty_pwd">密码不能为空</string>
    <string name="regular_pwd">请输入6-20位字符的密码</string>

    <string name="rem_pwd">记住密码</string>
    <string name="login">登录</string>
    <string name="username_hint">账号</string>
    <string name="pwd_hint">密码</string>

    <!--首页-->
    <string name="exercise_note">课堂练习</string>
    <string name="error_paper">实训室预约</string>
    <string name="store">课程资源</string>
    <string name="quick_entry">快速入口</string>
    <string name="wel_user">欢迎小明同学</string>

    <string name="exe_num">做过的题数</string>
    <string name="exe_time">完成练习次数</string>
    <string name="right_pec">平均答对率</string>
    <string name="start_question">让教育更智慧</string>

    <string name="notice">公告</string>
    <string name="version_update">版本更新</string>
    <string name="feedback">意见反馈</string>
    <string name="exit_app">退出系统</string>
    <string name="progress_fin">做过题数</string>

    <!--错题-->
    <string name="retest">练习</string>
    <string name="againtest">重测</string>
    <string name="sel_retest">选择重测类型</string>
    <string name="isfinish">完成</string>
    <string name="edit">编辑</string>
    <string name="answer_wrong">哎呀，不小心答错了！</string>
    <string name="answer_right">恭喜你，答对了！</string>
    <string name="answer">正确答案：</string>
    <string name="open_analysis">展开解析</string>
    <string name="diffcult">试题难度：</string>
    <string name="level">认知层次：</string>
    <string name="knowledge">知识点：</string>
    <string name="removeError">移出错题本</string>
    <string name="joinStore">加入收藏</string>
    <string name="answersheet">答题卡</string>
    <string name="retest_warming">注：重测答对的题目将移除错题本</string>
    <string name="retest_title">选择重测类型</string>
    <string name="remove_favorite">移出我的收藏</string>


    <!--练习记录-->
    <string name="finished">已完成</string>
    <string name="Unfinished">未完成</string>
    <string name="continueExe">继续练习</string>
    <string name="all_execise">全部</string>
    <string name="bt_cancle">取消</string>
    <string name="bt_config">确定</string>
    <string name="all_subject">全部科目</string>
    <string name="right_answer_text">正确答案：</string>


    <string name="all_images">全部图片</string>
    <!--本地相册-->
    <string name="select_album">选择相册</string>
    <string name="album_initialization">相册初始化中...</string>
    <string name="finish">完成</string>
    <!--test-->
    <string name="num_question">1000</string>
    <!--弹框-->
    <string name="popup_cancel">取消</string>
    <string name="popup_confirm">确定</string>
</resources>
