<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <ImageView
        android:id="@+id/imageview"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y500"
        android:background="@drawable/login_banner"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/ll_edit_bt_paddig"
        android:paddingRight="@dimen/ll_edit_bt_paddig">


        <com.gtafe.quiz.ClearEditText
            android:id="@+id/user"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y120"
            android:background="@drawable/bg_edit_login"
            android:hint="@string/username_hint"
            android:textColorHint="@color/text_grey"/>

        <com.gtafe.quiz.ClearEditText


            android:id="@+id/pwd"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y120"
            android:background="@drawable/bg_edit_login"
            android:hint="@string/pwd_hint"
            android:inputType="textPassword"
            android:textColorHint="@color/text_grey"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/remenber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rem_pwd"/>
        </LinearLayout>

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y100"
            android:layout_marginTop="@dimen/bt_login_margint"
            android:background="@drawable/bg_bt_login"
            android:text="@string/login"
            android:textColor="@color/white"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/ip_port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/x80"
        android:text="修改服务器地址"/>
</LinearLayout>

